--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(pigpio)
 
 set(CMAKE_C_FLAGS "-O3 -Wall -pthread")
 set(PIGPIO_FLAGS "-L. -lrt")
-#set(DESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/build/dest)
+set(DESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/build/dest)
 
 if(NOT DEFINED BUILD_SHARED_LIBS)
 set(BUILD_SHARED_LIBS "ON")
@@ -58,9 +58,17 @@ add_executable(pigs pigs.c command.c)
 # pig2vcd
 add_executable(pig2vcd pig2vcd.c command.c)
 
+# construct install strings
+# otherwise built makefiles contain $ENV{DESTDIR} instead of the literal build dir
+# and that chokes skbuild:
+# https://github.com/scikit-build/scikit-build/blob/0c33f15b0c0452e8bd70ab6057b4d283d6025b51/skbuild/cmaker.py#L427
+
+string(CONCAT DESTDIR_CGI ${DESTDIR} "/opt/pigpio/cgi")
+
+
 # install
 install(DIRECTORY
-	DESTINATION ${DESTDIR}/opt/pigpio/cgi
+	DESTINATION opt/pigpio/cgi
 	PATTERN ""
 	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
 		GROUP_READ GROUP_EXECUTE
@@ -68,13 +76,13 @@ install(DIRECTORY
 )
 
 install(TARGETS pigpio pigpiod_if pigpiod_if2 pig2vcd pigpiod pigs
-	LIBRARY DESTINATION ${DESTDIR}/usr/local/lib
-	RUNTIME DESTINATION ${DESTDIR}/usr/local/bin
-	ARCHIVE DESTINATION ${DESTDIR}/usr/local/lib
+	LIBRARY DESTINATION usr/local/lib
+	RUNTIME DESTINATION usr/local/bin
+	ARCHIVE DESTINATION usr/local/lib
 )
 
 install(FILES pigpio.h pigpiod_if.h pigpiod_if2.h
-	DESTINATION ${DESTDIR}/usr/local/include
+	DESTINATION usr/local/include
 	PERMISSIONS OWNER_READ OWNER_WRITE
 		GROUP_READ
 		WORLD_READ
@@ -82,7 +90,7 @@ install(FILES pigpio.h pigpiod_if.h pigpiod_if2.h
 
 file(GLOB man_1_SRC "*.1")
 install(FILES ${man_1_SRC}
-	DESTINATION ${DESTDIR}/usr/local/man/man1
+	DESTINATION usr/local/man/man1
 	PERMISSIONS OWNER_READ OWNER_WRITE
 		GROUP_READ
 		WORLD_READ
@@ -90,7 +98,7 @@ install(FILES ${man_1_SRC}
 
 file(GLOB man_3_SRC "*.3")
 install(FILES ${man_3_SRC}
-	DESTINATION ${DESTDIR}/usr/local/man/man3
+	DESTINATION usr/local/man/man3
 	PERMISSIONS OWNER_READ OWNER_WRITE
 		GROUP_READ
 		WORLD_READ
@@ -120,18 +128,18 @@ if(PYTHON3_FOUND)
 endif()
 
 add_custom_target(uninstall
-	COMMAND rm -f ${DESTDIR}/usr/local/include/pigpio.h
-	COMMAND rm -f ${DESTDIR}/usr/local/include/pigpiod_if.h
-	COMMAND rm -f ${DESTDIR}/usr/local/include/pigpiod_if2.h
-	COMMAND rm -f ${DESTDIR}/usr/local/lib/libpigpio.so
-	COMMAND rm -f ${DESTDIR}/usr/local/lib/libpigpiod_if.so
-	COMMAND rm -f ${DESTDIR}/usr/local/lib/libpigpiod_if2.so
-	COMMAND rm -f ${DESTDIR}/usr/local/bin/pig2vcd
-	COMMAND rm -f ${DESTDIR}/usr/local/bin/pigpiod
-	COMMAND rm -f ${DESTDIR}/usr/local/bin/pigs
+	COMMAND rm -f usr/local/include/pigpio.h
+	COMMAND rm -f usr/local/include/pigpiod_if.h
+	COMMAND rm -f usr/local/include/pigpiod_if2.h
+	COMMAND rm -f usr/local/lib/libpigpio.so
+	COMMAND rm -f usr/local/lib/libpigpiod_if.so
+	COMMAND rm -f usr/local/lib/libpigpiod_if2.so
+	COMMAND rm -f usr/local/bin/pig2vcd
+	COMMAND rm -f usr/local/bin/pigpiod
+	COMMAND rm -f usr/local/bin/pigs
 	COMMAND cd ${CMAKE_SOURCE_DIR} && ${PY2_CMD}
 	COMMAND cd ${CMAKE_SOURCE_DIR} && ${PY3_CMD}
-	COMMAND rm -f ${DESTDIR}/usr/local/man/man1/pig*.1
-	COMMAND rm -f ${DESTDIR}/usr/local/man/man3/pig*.3
+	COMMAND rm -f usr/local/man/man1/pig*.1
+	COMMAND rm -f usr/local/man/man3/pig*.3
 	COMMAND ldconfig
 )
