works, returning destdir to its commented fate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(pigpio)
 
 set(CMAKE_C_FLAGS "-O3 -Wall -pthread")
 set(PIGPIO_FLAGS "-L. -lrt")
-set(DESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/build/dest)
+#set(DESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/build/dest)
 
 if(NOT DEFINED BUILD_SHARED_LIBS)
 set(BUILD_SHARED_LIBS "ON")
